syntax = "proto3";
package account;

import "digest.proto";

message AccountId {
    // A Miden account ID is a 120-bit value derived from the commitments to account code and
    // storage, and a random user-provided seed.
    bytes id = 1;
}

message AccountSummary {
    AccountId account_id = 1;
    digest.Digest account_hash = 2;
    uint32 block_num = 3;
}

message AccountInfo {
    AccountSummary summary = 1;
    optional bytes details = 2;
}

message AccountHeader {
    // Vault root hash.
    digest.Digest vault_root = 1;
    // Storage root hash.
    digest.Digest storage_commitment = 2;
    // Code root hash.
    digest.Digest code_commitment = 3;
    // Account nonce.
    uint64 nonce = 4;
}
